# gsvvcompressor

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.py
.github/workflows/: build-release.yml
cevv/: decoder.py  deserializer.py  encoder.py  payload.py  serializer.py
cevv/combinations/: __init__.py  vq_xyz_zstd.py
cevv/compress/: zstd.py
cevv/interframe/: __init__.py  combine.py  decoder.py  encoder.py  interface.py  twopass.py
cevv/vq/: __init__.py  interface.py  twopass.py
cevv/xyz/: __init__.py  interface.py  knn.py  quant.py
cpython/: .gitignore  draco3dgs.h  dracoreduced3dgs.h  dracoreduced3dgs.pxd  dracoreduced3dgs.pyx
gsvvcompressor/: __init__.py  __main__.py  decoder.py  encoder.py  movecameras.py  payload.py  serializer.py
gsvvcompressor/combinations/: __init__.py  registry.py  vq1mask_xyz_zstd.py  vq_xyz_1mask.py  vq_xyz_1mask_zstd.py  vq_xyz_draco.py  vq_xyz_draco_2pass.py  vq_xyz_zstd.py
gsvvcompressor/compress/: __init__.py
gsvvcompressor/draco/: __init__.py  interface.py  serialize.py  twopass.py
gsvvcompressor/interframe/: __init__.py  combine.py  decoder.py  encoder.py  interface.py  twopass.py
gsvvcompressor/io/: __init__.py  bytes.py  config.py  gaussian_model.py
gsvvcompressor/vq/: interface.py  singlemask.py
gsvvcompressor/xyz/: dense.py  interface.py  size.py  twopass.py
