[build-system]
requires = ["setuptools>=61.0", "wheel", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "gsvvcompressor"
version = "1.2.0"
description = "A compression library for Gaussian Splatting video/volumetric data with vector quantization and inter-frame encoding"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Howard Yin", email = "yindaheng98@gmail.com" }]
maintainers = [{ name = "Howard Yin", email = "yindaheng98@gmail.com" }]
keywords = [
    "gaussian-splatting",
    "3dgs",
    "compression",
    "video-compression",
    "volumetric-video",
    "vector-quantization",
    "zstd",
    "pytorch",
    "deep-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "cloudpickle>=2.0.0",
    "zstandard>=0.18.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "gaussian_splatting @ git+https://github.com/yindaheng98/gaussian-splatting.git@master",
    "reduced_3dgs @ git+https://github.com/yindaheng98/reduced-3dgs.git@main",
    "gscompressor @ git+https://github.com/yindaheng98/gscompressor.git@master",
]

[project.urls]
Homepage = "https://github.com/yindaheng98/gsvvcompressor"
Documentation = "https://github.com/yindaheng98/gsvvcompressor#readme"
Repository = "https://github.com/yindaheng98/gsvvcompressor"
Issues = "https://github.com/yindaheng98/gsvvcompressor/issues"

[tool.setuptools.packages.find]
include = ["gsvvcompressor*"]
